--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <title>Page</title>
+  <link rel="icon" href="./img/Logo.png" type="image/x-icon">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css"
     integrity="sha384-Bfad6CLCknfcloXFOyFnlgtENryhrpZCe29RTifKEixXQZ38WheV+i/6YWSzkz3V" crossorigin="anonymous">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
@@ -99,7 +100,7 @@
         </div>
       </div>
       <div class="next_content ">
-        <div class="">
+        <div >
           <h2>Our <span>Specialties</span></h2>
           <p><i class="fas fa-check chek"></i>Lorem Ipsum is simply dummy text for demo </p>
           <p><i class="fas fa-check chek"></i>Printing and typesetting industry and dummy text</p>
